[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/info/Info.gd" type="Script" id=2]
[ext_resource path="res://src/FadeEffect.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0, 0, 0, 1 )

[node name="Info" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="FadeEffect" parent="." instance=ExtResource( 3 )]
node_path = NodePath("../VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = -542.0
margin_right = 330.0
margin_bottom = 510.0
custom_constants/separation = 42

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 660.0
margin_bottom = 600.0
rect_min_size = Vector2( 589, 600 )
custom_styles/normal = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "This game is open source under the [url=https://github.com/dulvui/pocket-broomball/blob/main/LICENSE]AGPL-3.0-or-later[/url] license.
It's created with Godot Engine and lots of love <3


[center][b]Credits[/b][/center]

[b]Code[/b]
Godot Engine by Juan Linietsky, Ariel Manzur and contributors
MIT
[url=https://godotengine.org/license]godotengine.org/license[/url]

\"Smoothing addon\"
Copyright: 2019 Lawnjelly [url=https://github.com/lawnjelly/smoothing-addon][/url]
License: MIT

[b]Audio[/b]
\"Chill music\"
Copyright: 2016 furbyguy[url=https://freesound.org/people/furbyguy/sounds/365187/]freesound.org/people/furbyguy/sounds/365187/[/url]
License: CC0-1.0

\"Energetic music\"
Copyright: 2017 furbyguy[url=https://freesound.org/people/furbyguy/sounds/388101/]freesound.org/people/furbyguy/sounds/388101/[/url]
License: CC0-1.0

\"Croud\"
Copyright: 2017 giddster[url=https://freesound.org/people/giddster/sounds/406214/]freesound.org/people/giddster/sounds/406214/[/url]
License: CC0-1.0

\"Horn\"
Copyright: 2012 santino_c[url=https://freesound.org/people/santino_c/sounds/170825/]freesound.org/people/santino_c/sounds/170825/[/url]
License: CC0-1.0

\"Ball hit\"
Copyright: 2012 volivieri[url=https://freesound.org/people/volivieri/sounds/37155/]freesound.org/people/volivieri/sounds/37155/[/url]
License: CC-BY-3.0

[b]2D[/b]
\"Game Icons\"
Copyright: kenney.nl [url=https://www.kenney.nl/assets/game-icons]kenney.nl/assets/game-icons[/url]
License: CC0-1.0

\"Patterns Pack\"
Copyright:  kenney.nl [url=https://www.kenney.nl/assets/pattern-pack-2]kenney.nl/assets/pattern-pack-2[/url]
License: CC0-1.0

\"Patterns Pack 2\"
Copyright:  kenney.nl [url=https://www.kenney.nl/assets/pattern-pack]kenney.nl/assets/pattern-pack[/url]
License: CC0-1.0

\"Simple icons\"
Copyright:  simple-icons [url=https://www.kenney.nl/assets/pattern-pack]github.com/simple-icons/simple-icons[/url]
License: CC0-1.0

\"Snowflake\"
Copyright: 2014 mkwong98[url=https://opengameart.org/content/snow-flake]opengameart.org/content/snow-flake[/url]
License: CC0-1.0

[b]Font[/b]
\"Carlito Regular\"
Copyright: 2022 Łukasz Dziedzic[url=https://www.1001fonts.com/carlito-font.html]www.1001fonts.com/carlito-font.html[/url]
License: OFL-1.1

\"DSEG7ClassicMini Bold\"
Copyright: 2022 Keshikan[url=https://github.com/keshikan/DSEG]github.com/keshikan/DSEG[/url]
License: OFL-1.1

[b]Team logos[/b]
The team logos where send to me by themselves, so I'm authorized to use them.  
Since they haven't issued a license for the logos, no license is available and all rights belong to the corresponding team.  
If you want to use them, please contact me at info@simondalvai.org or the teams directly.

All other assets made by me are licensed under the CC-BY-SA-4.0 license.
You can find more information and the complete source code on Github.

All the best,
Simon"
text = "This game is open source under the AGPL-3.0-or-later license.
It's created with Godot Engine and lots of love <3


Credits

Code
Godot Engine by Juan Linietsky, Ariel Manzur and contributors
MIT
godotengine.org/license

\"Smoothing addon\"
Copyright: 2019 Lawnjelly 
License: MIT

Audio
\"Chill music\"
Copyright: 2016 furbyguyfreesound.org/people/furbyguy/sounds/365187/
License: CC0-1.0

\"Energetic music\"
Copyright: 2017 furbyguyfreesound.org/people/furbyguy/sounds/388101/
License: CC0-1.0

\"Croud\"
Copyright: 2017 giddsterfreesound.org/people/giddster/sounds/406214/
License: CC0-1.0

\"Horn\"
Copyright: 2012 santino_cfreesound.org/people/santino_c/sounds/170825/
License: CC0-1.0

\"Ball hit\"
Copyright: 2012 volivierifreesound.org/people/volivieri/sounds/37155/
License: CC-BY-3.0

2D
\"Game Icons\"
Copyright: kenney.nl kenney.nl/assets/game-icons
License: CC0-1.0

\"Patterns Pack\"
Copyright:  kenney.nl kenney.nl/assets/pattern-pack-2
License: CC0-1.0

\"Patterns Pack 2\"
Copyright:  kenney.nl kenney.nl/assets/pattern-pack
License: CC0-1.0

\"Simple icons\"
Copyright:  simple-icons github.com/simple-icons/simple-icons
License: CC0-1.0

\"Snowflake\"
Copyright: 2014 mkwong98opengameart.org/content/snow-flake
License: CC0-1.0

Font
\"Carlito Regular\"
Copyright: 2022 Łukasz Dziedzicwww.1001fonts.com/carlito-font.html
License: OFL-1.1

\"DSEG7ClassicMini Bold\"
Copyright: 2022 Keshikangithub.com/keshikan/DSEG
License: OFL-1.1

Team logos
The team logos where send to me by themselves, so I'm authorized to use them.  
Since they haven't issued a license for the logos, no license is available and all rights belong to the corresponding team.  
If you want to use them, please contact me at info@simondalvai.org or the teams directly.

All other assets made by me are licensed under the CC-BY-SA-4.0 license.
You can find more information and the complete source code on Github.

All the best,
Simon"

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 642.0
margin_right = 660.0
margin_bottom = 960.0

[node name="Website" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 660.0
margin_bottom = 72.0
text = "WEBSITE"

[node name="Donate" type="Button" parent="VBoxContainer/Buttons"]
visible = false
margin_top = -109.0
margin_right = 589.0
margin_bottom = -7.0
text = "DONATE"

[node name="Github" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 82.0
margin_right = 660.0
margin_bottom = 154.0
text = "Github"

[node name="Join" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 164.0
margin_right = 660.0
margin_bottom = 236.0
text = "JOIN"

[node name="Back" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 246.0
margin_right = 660.0
margin_bottom = 318.0
text = "GO_BACK"

[connection signal="meta_clicked" from="VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="pressed" from="VBoxContainer/Buttons/Website" to="." method="_on_Website_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Donate" to="." method="_on_Donate_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Github" to="." method="_on_Github_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Back" to="." method="_on_Back_pressed"]
